--- a/DevKit/Views/TcpCommunicateView.xaml
+++ b/DevKit/Views/TcpCommunicateView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-    xmlns:cache="clr-namespace:DevKit.Cache"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -303,9 +302,14 @@
                 Grid.Column="1"
                 Margin="5,0,0,0"
                 IsOpen="{Binding IsRightDrawOpened}"
-                Opened="RightDrawer_OnOpened"
                 ShowMask="True"
                 ShowMode="Cover">
+
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="Opened">
+                        <b:InvokeCommandAction Command="{Binding DataContext.RightDrawerOpenedCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
 
                 <Grid Width="337" Background="White">
                     <Grid.RowDefinitions>
@@ -327,18 +331,18 @@
                             Text="指令值" />
 
                         <hc:TextBox
-                            x:Name="UserCommandTextBox"
                             Grid.Column="1"
                             Margin="10,0"
                             Padding="4,2"
                             hc:InfoElement.Placeholder="此项必填"
                             hc:InfoElement.ShowClearButton="True"
+                            Text="{Binding UserCommandValue}"
                             TextWrapping="NoWrap" />
 
                         <CheckBox
-                            x:Name="IsHexCheckBox"
                             Grid.Column="2"
-                            Content="Hex" />
+                            Content="Hex"
+                            IsChecked="{Binding IsHexChecked}" />
                     </Grid>
 
                     <Grid Grid.Row="1" Margin="10">
@@ -354,17 +358,17 @@
                             Text="指令注释" />
 
                         <hc:TextBox
-                            x:Name="CommandAnnotationTextBox"
                             Grid.Column="1"
                             Margin="10,0"
                             Padding="4,2"
                             hc:InfoElement.Placeholder="此项非必填"
                             hc:InfoElement.ShowClearButton="True"
+                            Text="{Binding CommandAnnotation}"
                             TextWrapping="NoWrap" />
 
                         <Button
                             Grid.Column="2"
-                            Click="SaveExtensionCommandButton_OnClick"
+                            Command="{Binding ExtensionCommandSaveCommand}"
                             Content="&#xe60a;"
                             FontFamily="/DevKit;component/Fonts/#iconfont" />
                     </Grid>
@@ -375,13 +379,20 @@
                         Margin="0,0,10,0"
                         HorizontalContentAlignment="Stretch"
                         BorderThickness="0"
+                        ItemsSource="{Binding UserCommandCollection}"
                         ScrollViewer.CanContentScroll="False"
                         ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                         ScrollViewer.VerticalScrollBarVisibility="Hidden"
                         Style="{x:Null}">
 
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="MouseEnter">
+                                <b:InvokeCommandAction Command="{Binding DataContext.MouseEnterCommand, ElementName=CommandListBox}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+
                         <ListBox.ItemTemplate>
-                            <DataTemplate DataType="{x:Type cache:CommandExtensionCache}">
+                            <DataTemplate>
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
@@ -420,7 +431,8 @@
                                             Grid.Column="2"
                                             Margin="0,2,0,0"
                                             BorderThickness="0"
-                                            Click="ExecuteCommandButton_OnClick"
+                                            Command="{Binding DataContext.ExecuteCommand, ElementName=CommandListBox}"
+                                            CommandParameter="{Binding CommandValue}"
                                             Content="&#xe726;"
                                             FontFamily="/DevKit;component/Fonts/#iconfont"
                                             Foreground="LimeGreen"
@@ -432,7 +444,7 @@
                                         Grid.Row="1"
                                         Margin="0,3,0,0"
                                         FontSize="14"
-                                        Text="{Binding Command}"
+                                        Text="{Binding CommandValue}"
                                         TextWrapping="Wrap" />
                                 </Grid>
                             </DataTemplate>
@@ -448,7 +460,7 @@
                                             </Border>
 
                                             <ControlTemplate.Triggers>
-                                                <Trigger Property="IsMouseOver" Value="True" >
+                                                <Trigger Property="IsMouseOver" Value="True">
                                                     <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
                                                 </Trigger>
                                             </ControlTemplate.Triggers>
