扩展指令最终还是采用Dialog实现，抽屉效果不好

--- a/DevKit/Views/ApplicationPackageView.xaml
+++ b/DevKit/Views/ApplicationPackageView.xaml
@@ -174,7 +174,9 @@
             Margin="10"
             HorizontalContentAlignment="Stretch"
             BorderThickness="0"
-            ItemsSource="{Binding ApkFileCollection}">
+            ItemsSource="{Binding ApkFileCollection}"
+            ScrollViewer.CanContentScroll="False"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden">
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
