--- a/DevKit/Views/TcpCommunicateView.xaml
+++ b/DevKit/Views/TcpCommunicateView.xaml
@@ -30,10 +30,11 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="1.75*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
+        <!--  TCP 客户端  -->
         <Grid Grid.Column="0" Margin="10,10,5,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -74,7 +75,8 @@
                     Grid.Column="3"
                     Margin="10,0,0,0"
                     Command="{Binding ConnectRemoteCommand}"
-                    Content="{Binding ButtonState}" />
+                    Content="{Binding ButtonState}"
+                    Style="{StaticResource ButtonPrimary}" />
             </Grid>
 
             <ListBox
@@ -289,9 +291,86 @@
             </Grid>
         </Grid>
 
-        <Grid
-            Grid.Column="1"
-            Margin="5,10,10,10"
-            Background="Wheat" />
+        <!--  TCP 服务端  -->
+        <Grid Grid.Column="1" Margin="5,10,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="本机地址" />
+
+                <hc:ComboBox
+                    Grid.Column="1"
+                    Margin="10,0"
+                    ItemsSource="{Binding LocalAddressCollection}"
+                    SelectedIndex="0" />
+
+                <Ellipse
+                    Grid.Column="2"
+                    Width="18"
+                    Height="18"
+                    Fill="{Binding ListenStateColor}" />
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="监听端口" />
+
+                <hc:TextBox
+                    Grid.Column="1"
+                    MinWidth="50"
+                    Margin="10,0"
+                    hc:InfoElement.Placeholder="端口"
+                    hc:InfoElement.ShowClearButton="True"
+                    Text="{Binding ListenPort}"
+                    TextWrapping="NoWrap" />
+
+                <Button
+                    Grid.Column="2"
+                    Command="{Binding ServerListenCommand}"
+                    Content="{Binding ListenState}"
+                    Style="{StaticResource ButtonPrimary}" />
+            </Grid>
+
+            <ListBox
+                x:Name="ClientListBox"
+                Grid.Row="2"
+                ItemsSource="{Binding TcpClientCollection}"
+                ScrollViewer.CanContentScroll="False"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                Style="{x:Null}">
+
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="MouseDoubleClick">
+                        <b:InvokeCommandAction Command="{Binding ItemDoubleClickCommand}" CommandParameter="{Binding SelectedItem, ElementName=ClientListBox}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+
+                <!--  自动滑动到最底部  -->
+                <b:Interaction.Behaviors>
+                    <ut:AutoScrollToBottomBehavior />
+                </b:Interaction.Behaviors>
+            </ListBox>
+        </Grid>
     </Grid>
 </UserControl>
