--- a/DevKit/Views/WebSocketCommunicateView.xaml
+++ b/DevKit/Views/WebSocketCommunicateView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="DevKit.Views.TcpCommunicateView"
+    x:Class="DevKit.Views.WebSocketCommunicateView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ut="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    d:DataContext="{d:DesignInstance Type=vm:TcpCommunicateViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:WebSocketCommunicateViewModel}"
     d:DesignHeight="560"
     d:DesignWidth="600"
     Background="white"
@@ -34,7 +34,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <!--  TCP 客户端  -->
+        <!--  WebSocket 客户端  -->
         <Grid Grid.Column="0" Margin="10,10,5,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -60,22 +60,13 @@
                 <hc:TextBox
                     Grid.Column="1"
                     Margin="10,0"
-                    hc:InfoElement.Placeholder="远程TCP Server IP"
+                    hc:InfoElement.Placeholder="远程WebSocket Server Address"
                     hc:InfoElement.ShowClearButton="True"
                     Text="{Binding RemoteAddress}"
                     TextWrapping="NoWrap" />
 
-                <hc:TextBox
-                    Grid.Column="2"
-                    MinWidth="70"
-                    hc:InfoElement.Placeholder="端口"
-                    hc:InfoElement.ShowClearButton="True"
-                    Text="{Binding RemotePort}"
-                    TextWrapping="NoWrap" />
-
                 <CheckBox
-                    Grid.Column="3"
-                    Margin="10,0"
+                    Grid.Column="2"
                     Content="Hex显示"
                     IsChecked="{Binding ShowHex}">
                     <b:Interaction.Triggers>
@@ -90,7 +81,8 @@
                 </CheckBox>
 
                 <Button
-                    Grid.Column="4"
+                    Grid.Column="3"
+                    Margin="10,0,0,0"
                     Command="{Binding ConnectRemoteCommand}"
                     Content="{Binding ButtonState}"
                     Style="{StaticResource ButtonPrimary}" />
@@ -288,7 +280,7 @@
             </Grid>
         </Grid>
 
-        <!--  TCP 服务端  -->
+        <!--  WebSocket 服务端  -->
         <Grid Grid.Column="1" Margin="5,10,10,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
