--- a/DevKit/Views/TcpCommunicateView.xaml
+++ b/DevKit/Views/TcpCommunicateView.xaml
@@ -76,7 +76,7 @@
                 <CheckBox
                     Grid.Column="3"
                     Margin="10,0"
-                    Content="Hex显示"
+                    Content="HEX显示"
                     IsChecked="{Binding ShowHex}">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="Checked">
@@ -263,7 +263,7 @@
                     <CheckBox
                         Grid.Row="0"
                         Margin="0,0,0,10"
-                        Content="Hex"
+                        Content="HEX"
                         IsChecked="{Binding SendHex}">
                         <b:Interaction.Triggers>
                             <b:EventTrigger EventName="Checked">
