--- a/DevKit/Views/ExCommandWindow.xaml
+++ b/DevKit/Views/ExCommandWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="扩展指令"
+    Title="DevKit"
     mc:Ignorable="d">
     <!--  只是个容器，便于修改窗口启动位置  -->
 </Window>
