--- a/DevKit/Views/UdpCommunicateView.xaml
+++ b/DevKit/Views/UdpCommunicateView.xaml
@@ -95,8 +95,7 @@
                 Margin="0,10"
                 ItemsSource="{Binding MessageCollection}"
                 ScrollViewer.CanContentScroll="False"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                Style="{x:Null}">
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
@@ -340,8 +339,7 @@
                 Grid.Row="2"
                 ItemsSource="{Binding TcpClientCollection}"
                 ScrollViewer.CanContentScroll="False"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                Style="{x:Null}">
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 
                 <b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseDoubleClick">
