--- a/DevKit/Views/WebSocketCommunicateView.xaml
+++ b/DevKit/Views/WebSocketCommunicateView.xaml
@@ -77,8 +77,7 @@
                 Margin="0,10"
                 ItemsSource="{Binding MessageCollection}"
                 ScrollViewer.CanContentScroll="False"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                Style="{x:Null}">
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
@@ -306,8 +305,7 @@
                 Grid.Row="2"
                 ItemsSource="{Binding WebSocketClientCollection}"
                 ScrollViewer.CanContentScroll="False"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                Style="{x:Null}">
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 
                 <b:Interaction.Triggers>
                     <b:EventTrigger EventName="MouseDoubleClick">
