--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -26,15 +26,81 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        <hc:ImageSelector
-            Width="192"
-            Height="192"
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <hc:ImageSelector
+                Grid.Column="0"
+                Width="192"
+                Height="192"
+                Margin="10"
+                hc:BorderElement.CornerRadius="0"
+                BorderBrush="{DynamicResource PrimaryBrush}"
+                BorderThickness="1" />
+        </Grid>
+
+        <Grid Grid.Row="1" Margin="10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <ComboBox
+                x:Name="TypeComboBox"
+                Grid.Column="0"
+                ItemsSource="{Binding PlatformTypes}"
+                SelectedIndex="0" />
+
+            <Button
+                Grid.Column="1"
+                Margin="10,0"
+                Command="{Binding OutputCommand}"
+                Content="导出到本地"
+                Style="{StaticResource ButtonPrimary}" />
+
+            <RadioButton
+                x:Name="IcoRadioButton"
+                Grid.Column="2"
+                Content="ICO"
+                IsChecked="True" />
+
+            <RadioButton
+                x:Name="PngRadioButton"
+                Grid.Column="3"
+                Margin="10,0"
+                Content="PNG" />
+
+            <RadioButton
+                x:Name="JpgRadioButton"
+                Grid.Column="4"
+                Content="JPG" />
+        </Grid>
+
+        <ListBox
+            x:Name="WindowsIconListBox"
+            Grid.Row="2"
+            Margin="10" />
+
+        <ListBox
+            x:Name="AndroidDrawableListBox"
+            Grid.Row="2"
             Margin="10"
-            hc:BorderElement.CornerRadius="0"
-            BorderBrush="{DynamicResource PrimaryBrush}"
-            BorderThickness="1" />
+            Visibility="Collapsed" />
+
+        <ListBox
+            x:Name="IPhoneImageListBox"
+            Grid.Row="2"
+            Margin="10"
+            Visibility="Collapsed" />
     </Grid>
 </UserControl>
