--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -2,6 +2,7 @@
     x:Class="DevKit.Views.GenerateIconView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -59,7 +60,13 @@
                 x:Name="TypeComboBox"
                 Grid.Column="0"
                 ItemsSource="{Binding PlatformTypes}"
-                SelectedIndex="0" />
+                SelectedIndex="0">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="DropDownClosed">
+                        <b:InvokeCommandAction Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding ElementName=TypeComboBox}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </ComboBox>
 
             <Button
                 Grid.Column="1"
@@ -72,13 +79,15 @@
                 x:Name="IcoRadioButton"
                 Grid.Column="2"
                 Content="ICO"
-                IsChecked="True" />
+                IsChecked="{Binding IsIcoRadioButtonChecked}"
+                IsEnabled="{Binding IsIcoRadioButtonEnabled}" />
 
             <RadioButton
                 x:Name="PngRadioButton"
                 Grid.Column="3"
                 Margin="10,0"
-                Content="PNG" />
+                Content="PNG"
+                IsChecked="{Binding IsPngRadioButtonChecked}" />
 
             <RadioButton
                 x:Name="JpgRadioButton"
@@ -89,18 +98,19 @@
         <ListBox
             x:Name="WindowsIconListBox"
             Grid.Row="2"
-            Margin="10" />
+            Margin="10"
+            Visibility="{Binding IsWindowsIconListBoxVisible}" />
 
         <ListBox
             x:Name="AndroidDrawableListBox"
             Grid.Row="2"
             Margin="10"
-            Visibility="Collapsed" />
+            Visibility="{Binding IsAndroidDrawableListBoxVisible}" />
 
         <ListBox
             x:Name="IPhoneImageListBox"
             Grid.Row="2"
             Margin="10"
-            Visibility="Collapsed" />
+            Visibility="{Binding IsIPhoneImageListBoxVisible}" />
     </Grid>
 </UserControl>
