--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -45,7 +45,17 @@
                 Margin="10"
                 hc:BorderElement.CornerRadius="0"
                 BorderBrush="{DynamicResource PrimaryBrush}"
-                BorderThickness="1" />
+                BorderThickness="1">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="ImageSelected">
+                        <b:InvokeCommandAction Command="{Binding ImageSelectedCommand}" />
+                    </b:EventTrigger>
+
+                    <b:EventTrigger EventName="ImageUnselected">
+                        <b:InvokeCommandAction Command="{Binding ImageUnselectedCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </hc:ImageSelector>
         </Grid>
 
         <Grid Grid.Row="1" Margin="10,0">
@@ -101,18 +111,21 @@
             x:Name="WindowsIconListBox"
             Grid.Row="2"
             Margin="10"
+            ItemsSource="{Binding ImageTypeCollection}"
             Visibility="{Binding IsWindowsIconListBoxVisible}" />
 
         <ListBox
             x:Name="AndroidDrawableListBox"
             Grid.Row="2"
             Margin="10"
+            ItemsSource="{Binding ImageTypeCollection}"
             Visibility="{Binding IsAndroidDrawableListBoxVisible}" />
 
         <ListBox
             x:Name="IPhoneImageListBox"
             Grid.Row="2"
             Margin="10"
+            ItemsSource="{Binding ImageTypeCollection}"
             Visibility="{Binding IsIPhoneImageListBoxVisible}" />
     </Grid>
 </UserControl>
