--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -112,7 +112,61 @@
             Grid.Row="2"
             Margin="10"
             ItemsSource="{Binding ImageTypeCollection}"
-            Visibility="{Binding IsWindowsIconListBoxVisible}" />
+            Visibility="{Binding IsWindowsIconListBoxVisible}">
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            Margin="0,7"
+                            FontSize="14">
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0}*{1}">
+                                    <Binding Path="Width" />
+                                    <Binding Path="Height" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+
+                        <Border
+                            Grid.Row="1"
+                            Width="{Binding Width}"
+                            Height="{Binding Height}"
+                            BorderBrush="{DynamicResource BorderBrush}"
+                            BorderThickness="1">
+                            <Image />
+                        </Border>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+            <!--  ListBox横排  -->
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel HorizontalAlignment="Stretch" Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border x:Name="ItemContainerBorder" Margin="5,0">
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Top" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
 
         <ListBox
             x:Name="AndroidDrawableListBox"
