--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -57,6 +57,51 @@
                     </b:EventTrigger>
                 </b:Interaction.Triggers>
             </hc:ImageSelector>
+
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <TextBlock
+                    Grid.Row="0"
+                    Margin="0,10"
+                    Text="{Binding Value, ElementName=RoundCornerSlider, StringFormat=圆角尺寸：{0}px}" />
+
+                <Slider
+                    x:Name="RoundCornerSlider"
+                    Grid.Row="1"
+                    Margin="0,10"
+                    hc:TipElement.Visibility="Collapsed"
+                    IsSnapToTickEnabled="True"
+                    Maximum="60"
+                    Minimum="10"
+                    TickFrequency="5"
+                    TickPlacement="BottomRight"
+                    Value="{Binding CornerRadius}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="ValueChanged">
+                            <b:InvokeCommandAction Command="{Binding SliderValueChangedCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </Slider>
+
+                <Button
+                    Grid.Row="2"
+                    Command="{Binding SaveRoundCornerIconCommand}"
+                    Content="保存圆角图标"
+                    Style="{StaticResource ButtonDashedPrimary}" />
+            </Grid>
+
+            <Image
+                Grid.Column="2"
+                Width="192"
+                Height="192"
+                Margin="10,0"
+                HorizontalAlignment="Right"
+                Source="{Binding RoundCornerImage}" />
         </Grid>
 
         <Grid Grid.Row="1" Margin="10,0">
