--- a/DevKit/Views/GenerateIconView.xaml
+++ b/DevKit/Views/GenerateIconView.xaml
@@ -80,19 +80,27 @@
                     Minimum="10"
                     TickFrequency="5"
                     TickPlacement="BottomRight"
-                    Value="{Binding CornerRadius}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="ValueChanged">
-                            <b:InvokeCommandAction Command="{Binding SliderValueChangedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </Slider>
+                    Value="{Binding CornerRadius}" />
 
-                <Button
-                    Grid.Row="2"
-                    Command="{Binding SaveRoundCornerIconCommand}"
-                    Content="保存圆角图标"
-                    Style="{StaticResource ButtonDashedPrimary}" />
+                <Grid Grid.Row="2" VerticalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Button
+                        Grid.Row="0"
+                        Command="{Binding CreateRoundCornerIconCommand}"
+                        Content="生成圆角图标"
+                        Style="{StaticResource ButtonPrimary}" />
+
+                    <Button
+                        Grid.Row="1"
+                        Margin="0,10,0,0"
+                        Command="{Binding SaveRoundCornerIconCommand}"
+                        Content="保存圆角图标"
+                        Style="{StaticResource ButtonDashedPrimary}" />
+                </Grid>
             </Grid>
 
             <Image
@@ -134,27 +142,21 @@
                 Style="{StaticResource ButtonPrimary}" />
 
             <RadioButton
-                x:Name="IcoRadioButton"
                 Grid.Column="2"
                 Content="ICO"
                 IsChecked="{Binding IsIcoRadioButtonChecked}"
                 IsEnabled="{Binding IsIcoRadioButtonEnabled}" />
 
             <RadioButton
-                x:Name="PngRadioButton"
                 Grid.Column="3"
                 Margin="10,0"
                 Content="PNG"
                 IsChecked="{Binding IsPngRadioButtonChecked}" />
 
-            <RadioButton
-                x:Name="JpgRadioButton"
-                Grid.Column="4"
-                Content="JPG" />
+            <RadioButton Grid.Column="4" Content="JPG" />
         </Grid>
 
         <ListBox
-            x:Name="WindowsIconListBox"
             Grid.Row="2"
             Margin="10"
             ItemsSource="{Binding ImageTypeCollection}"
@@ -215,7 +217,6 @@
         </ListBox>
 
         <ListBox
-            x:Name="AndroidDrawableListBox"
             Grid.Row="2"
             Margin="10"
             ItemsSource="{Binding ImageTypeCollection}"
